==> Embedfire-stm32f767-tiaozhanzhe/ebf_stm32f767_tiaozhanzhe_code/I2S—音频录制与回放/User/wm8978/bsp_wm8978.c <==
#include "./wm8978/bsp_wm8978.h"
#include "./usart/bsp_usart.h"
#include "main.h"
#include "./i2c/i2c.h"
#include "./Recorder/Recorder.h"

void wm8978_CfgAudioIF(uint16_t _usStandard, uint8_t _ucWordLen)
{
	uint16_t usReg;

	/* WM8978(V4.5_2011).pdf 73页，寄存器列表 */

	/*	REG R4, 音频接口控制寄存器
		B8		BCP	 = X, BCLK极性，0表示正常，1表示反相
		B7		LRCP = x, LRC时钟极性，0表示正常，1表示反相
		B6:5	WL = x， 字长，00=16bit，01=20bit，10=24bit，11=32bit （右对齐模式只能操作在最大24bit)
		B4:3	FMT = x，音频数据格式，00=右对齐，01=左对齐，10=I2S格式，11=PCM
		B2		DACLRSWAP = x, 控制DAC数据出现在LRC时钟的左边还是右边
		B1 		ADCLRSWAP = x，控制ADC数据出现在LRC时钟的左边还是右边
		B0		MONO	= 0，0表示立体声，1表示单声道，仅左声道有效
	*/
	usReg = 0;
	if (_usStandard == I2S_STANDARD_PHILIPS)	/* I2S飞利浦标准 */
	{
		usReg |= (2 << 3);
	}
	else if (_usStandard == I2S_STANDARD_MSB)	/* MSB对齐标准(左对齐) */
	{
		usReg |= (1 << 3);
	}
	else if (_usStandard == I2S_STANDARD_LSB)	/* LSB对齐标准(右对齐) */
	{
		usReg |= (0 << 3);
	}
	else	/* PCM标准(16位通道帧上带长或短帧同步或者16位数据帧扩展为32位通道帧) */
	{
		usReg |= (3 << 3);;
	}

	if (_ucWordLen == 24)
	{
		usReg |= (2 << 5);
	}
	else if (_ucWordLen == 32)
	{
		usReg |= (3 << 5);
	}
	else
	{
		usReg |= (0 << 5);		/* 16bit */
	}
	wm8978_WriteReg(4, usReg);

	/*
		R6，时钟产生控制寄存器
		MS = 0,  WM8978被动时钟，由MCU提供MCLK时钟
	*/
	wm8978_WriteReg(6, 0x000);
}

void I2S_GPIO_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

/**
	* I2S总线传输音频数据口线
	* WM8978_LRC    -> PB12/I2S2_WS
	* WM8978_BCLK   -> PD3/I2S2_CK
	* WM8978_ADCDAT -> PC2/I2S2_SD
	* WM8978_DACDAT -> PI3/I2S2_SD
	* WM8978_MCLK   -> PC6/I2S2_MCK
	*/	
	/* Enable GPIO clock */
	WM8978_LRC_GPIO_CLK();
	WM8978_BCLK_GPIO_CLK();                         
	WM8978_ADCDAT_GPIO_CLK();
	WM8978_DACDAT_GPIO_CLK();
	WM8978_MCLK_GPIO_CLK();

	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FAST;
	GPIO_InitStructure.Pull = GPIO_NOPULL;

	GPIO_InitStructure.Pin = WM8978_LRC_PIN;
	GPIO_InitStructure.Alternate = WM8978_LRC_AF;
	HAL_GPIO_Init(WM8978_LRC_PORT, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = WM8978_BCLK_PIN;
	GPIO_InitStructure.Alternate = WM8978_BCLK_AF;
	HAL_GPIO_Init(WM8978_BCLK_PORT, &GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = WM8978_DACDAT_PIN;
	GPIO_InitStructure.Alternate = WM8978_DACDAT_AF;
	HAL_GPIO_Init(WM8978_DACDAT_PORT, &GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = WM8978_MCLK_PIN;
	GPIO_InitStructure.Alternate = WM8978_MCLK_AF;
	HAL_GPIO_Init(WM8978_MCLK_PORT, &GPIO_InitStructure);
	
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Pin = WM8978_ADCDAT_PIN;
	HAL_GPIO_Init(WM8978_ADCDAT_PORT, &GPIO_InitStructure);
}

void I2S_Stop(void)
{
	/* 禁能 SPI2/I2S2 外设 */
	__HAL_I2S_DISABLE(&I2S_InitStructure);
	__HAL_I2S_DISABLE(&I2Sext_InitStructure);
	/* 关闭 I2S2 APB1 时钟 */
	WM8978_CLK_DISABLE();
}
